fix: align search icon

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -12,6 +12,13 @@
   text-transform: uppercase;
 }
 
+.search-icon-addon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.125rem;
+}
+
 .brand-mark {
   display: inline-flex;
   align-items: center;
